HHH-18972 Upgrade to ByteBuddy 1.15.11